many new stuff, home with sections and more pages

--- a/src/scss/theme-test.scss
+++ b/src/scss/theme-test.scss
@@ -38,6 +38,8 @@
 // import '../../bower_components/bootstrap-select/sass/bootstrap-select';
 // import '../../bower_components/bootstrap-select/sass/variables';
 
+@import 'flexbox';
+
 @import 'layout';
 @import 'fonts';
 @import 'navbar';
@@ -69,3 +71,4 @@
 @import 'app-it-recht-kanzlei';
 @import 'morphext';
 @import 'tetris';
+@import 'sections';
