--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -5,6 +5,14 @@
     &:focus {
         box-shadow: none !important;
     }
+
+    &.btn-lg {
+        font-size: $font-size-lg;
+    }
+
+    &.btn-sm {
+        font-size: $font-size-sm;
+    }
 }
 
 .btn-primary {
