--- a/theme/templates/page.liquid
+++ b/theme/templates/page.liquid
@@ -1,15 +1,15 @@
-<div class="container pt-5">
+<div class="container-fluid pt-5">
   <div class="row">
-
-    <div class="col-xs-12 text-center">
-      <h1 class="page-title mt-0 mb-4">{{ page.title }}</h1>
-    </div>
+   {% unless page.title == blank %}
+      <div class="col-xs-12 text-left">
+        <h1 class="page-title mt-0 mb-4">{{ page.title }}</h1>
+      </div>
+    {% endunless %}
 
     {% unless page.content == blank %}
-        <div class="col-xs-12 col-md-8 offset-md-2 rte">
+        <div class="col-xs-12 rte">
         {{ page.content }}
         </div>
     {% endunless %}
-
   </div>
 </div>
