--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -25,6 +25,7 @@
 @import '../../bower_components/jumplink-components/scss/carousel';
 @import '../../bower_components/jumplink-components/scss/spacing';
 @import '../../bower_components/jumplink-components/scss/sizes';
+@import '../../bower_components/jumplink-components/scss/shadow';
 
 @import '../../bower_components/slick-carousel/slick/slick';
 @import '../../bower_components/slick-carousel/slick/slick-theme';
