--- a/theme/sections/jumplink-text-row-shopify.liquid
+++ b/theme/sections/jumplink-text-row-shopify.liquid
@@ -82,7 +82,7 @@
 
 {% schema %}
   {
-    "name": "Text Row (E-Commerce)",
+    "name": "Text Row (Shopify)",
     "class": "jumplink-text-row row",
     "settings": [
       {
