--- a/src/scss/static/_buttons.scss
+++ b/src/scss/static/_buttons.scss
@@ -38,7 +38,7 @@
             padding-left: 5px;
             padding-right: 5px;
             &:focus {
-                border-color: $input-border-focus;
+                // border-color: $input-border-focus;
             }
         }
         &:first-child .btn {
