--- a/src/scss/static/_cart.scss
+++ b/src/scss/static/_cart.scss
@@ -4,6 +4,6 @@
   }
 
   .cart-summary {
-    z-index: $zindex-navbar; // show summary over modal
+    // z-index: $zindex-navbar; // show summary over modal
   }
 }
