--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -54,7 +54,8 @@
   </script> {% endcomment %}
 
   <link rel="stylesheet" href="{{ 'social/social-icons.css' | global_asset_url }}">
-  <link rel="stylesheet" href="{{ 'theme.scss.css' | asset_url }}" id="alertifyCSS">
+  <link rel="stylesheet" href="{{ 'theme.css' | asset_url }}">
+  <link rel="stylesheet" href="{{ 'theme.scss.css' | asset_url }}">
   {{ 'jumplink-templates.js'  | asset_url | script_tag }}
   {{ 'jumplink-sections.js'  | asset_url | script_tag }}
   {{ 'shop.js' | asset_url | script_tag }}
