--- a/src/scss/static/_typography.scss
+++ b/src/scss/static/_typography.scss
@@ -49,7 +49,7 @@
   }
   img {
     display: inline-block;
-    @extend .pixelated;
+    // @extend .pixelated;
     height: 16px;
     margin-bottom: 4px;
     margin-right: 3px;
