--- a/src/scss/static/_variables.scss
+++ b/src/scss/static/_variables.scss
@@ -8,15 +8,15 @@ $font-gt-walsheim-bold-woff-path: "./GT-Walsheim-Bold.woff" !default;
 $font-gt-walsheim-bold-ttf-path: "./GT-Walsheim-Bold.ttf" !default;
 $font-gt-walsheim-bold-otf-path: "./GT-Walsheim-Bold.otf" !default;
 
-$iconset-arrow-l-url: '';
-$iconset-arrow-r-url: '';
-$iconset-arrow-b-url: '';
-$iconset-arrow-t-url: '';
+$iconset-arrow-l-url: '[$iconset-arrow-l-url]';
+$iconset-arrow-r-url: '[$iconset-arrow-r-url]';
+$iconset-arrow-b-url: '[$iconset-arrow-b-url]';
+$iconset-arrow-t-url: '[$iconset-arrow-t-url:]';
 
-$iconset-arrow-big-l-url: '';
-$iconset-arrow-big-r-url: '';
-$iconset-arrow-big-b-url: '';
-$iconset-arrow-big-t-url: '';
+$iconset-arrow-big-l-url: '[$iconset-arrow-big-l-url]';
+$iconset-arrow-big-r-url: '[$iconset-arrow-big-r-url]';
+$iconset-arrow-big-b-url: '[$iconset-arrow-big-b-url]';
+$iconset-arrow-big-t-url: '[$iconset-arrow-big-t-url]';
 
 $slick-prev-character: url($iconset-arrow-l-url);
 $slick-next-character: url($iconset-arrow-r-url);
