--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -40,12 +40,14 @@
 
   {{ 'bundle.js' | asset_url | script_tag }}
   
+  {% comment %}
   {{ 'custom-libs.js' | asset_url | script_tag }}
   {{ 'shopify_common.js' | shopify_asset_url | script_tag }}
   {{ 'customer_area.js' | shopify_asset_url | script_tag }}
   {{ 'api.jquery.js' | shopify_asset_url | script_tag }}
   {{ 'option_selection.js' | asset_url | script_tag }}
   {{ 'https://www.google-analytics.com/analytics.js' | script_tag }}
+  {% endcomment %}
 
   {% comment %} <script>
     if(typeof(videojs) !== 'undefined' && typeof(videojs.options) !== 'undefined' && typeof(videojs.options.flash) !== 'undefined' ) {
@@ -53,14 +55,17 @@
     }
   </script> {% endcomment %}
 
+  {% comment %}
   <link rel="stylesheet" href="{{ 'social/social-icons.css' | global_asset_url }}">
+  {% endcomment %}
   <link rel="stylesheet" href="{{ 'theme.css' | asset_url }}">
   <link rel="stylesheet" href="{{ 'theme.scss.css' | asset_url }}">
+
+  {% comment %}
   {{ 'jumplink-templates.js'  | asset_url | script_tag }}
   {{ 'jumplink-sections.js'  | asset_url | script_tag }}
   {{ 'shop.js' | asset_url | script_tag }}
-
-  <script>jQuery('html').removeClass('no-js').addClass('js');</script>
+  {% endcomment %}
 
 </head>
 
@@ -174,8 +179,6 @@
   </div>
 
   {% include 'jumplink-footer' %}
-
-  {% include 'jumplink-preload-images' %}
 
 </body>
 </html>
