--- a/theme/assets/theme.css
+++ b/theme/assets/theme.css
@@ -8221,7 +8221,7 @@ button.bg-dark:focus {
   text-align: justify !important;
 }
 
-.text-nowrap {
+.text-nowrap, .brand-01 .brand-text {
   white-space: nowrap !important;
 }
 
@@ -8295,7 +8295,7 @@ button.bg-dark:focus {
   text-transform: lowercase !important;
 }
 
-.text-uppercase {
+.text-uppercase, .brand-01 .brand-text {
   text-transform: uppercase !important;
 }
 
@@ -8506,210 +8506,50 @@ html, body {
   overflow: hidden;
 }
 
-.alertify-logs > * {
-  padding: 1rem 2rem;
-  color: #212529;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 0.25rem;
+.brand-01 {
+  color: #000;
 }
 
-.alertify-logs > *, .alertify-logs > *.default {
-  background: rgba(0, 0, 0, 0.8);
-}
-
-.alertify-logs > *.error {
-  color: #212529;
-}
-
-.alertify-logs > *.success {
-  color: #212529;
-}
-
-.alertify {
-  position: fixed;
-  background-color: rgba(0, 0, 0, 0.3);
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 99999;
-}
-
-.alertify.hide {
-  opacity: 0;
-  pointer-events: none;
-}
-
-.alertify, .alertify.show {
-  box-sizing: border-box;
-  transition: all 0.33s cubic-bezier(0.25, 0.8, 0.25, 1);
-}
-
-.alertify, .alertify * {
-  box-sizing: border-box;
-}
-
-.alertify .dialog {
-  padding: 12px;
-}
-
-.alertify .dialog, .alertify .alert {
-  width: 100%;
-  margin: 0 auto;
-  position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-}
-
-.alertify .dialog > *, .alertify .alert > * {
-  width: 400px;
-  max-width: 95%;
-  margin: 0 auto;
-  text-align: center;
-  padding: 1rem;
-  background: #fff;
-  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.14), 0 4px 5px 0 rgba(0, 0, 0, 0.098), 0 1px 10px 0 rgba(0, 0, 0, 0.084);
-}
-
-.alertify .dialog .msg, .alertify .alert .msg {
-  padding: 1rem;
-  margin-bottom: 1rem;
-  margin: 0;
-  text-align: left;
-}
-
-.alertify .dialog input:not(.form-control), .alertify .alert input:not(.form-control) {
-  margin-bottom: 15px;
-  width: 100%;
-  font-size: 100%;
-  padding: 1rem;
-}
-
-.alertify .dialog input:not(.form-control):focus, .alertify .alert input:not(.form-control):focus {
-  outline-offset: -2px;
-}
-
-.alertify .dialog nav, .alertify .alert nav {
-  text-align: right;
-}
-
-.alertify .dialog nav button:not(.btn):not(.pure-button):not(.md-button):not(.mdl-button), .alertify .alert nav button:not(.btn):not(.pure-button):not(.md-button):not(.mdl-button) {
-  background: transparent;
-  box-sizing: border-box;
-  color: rgba(0, 0, 0, 0.87);
-  position: relative;
-  outline: 0;
-  border: 0;
+.brand-01 .brand-text {
+  font-size: 20px;
+  letter-spacing: 0.1em;
   display: inline-block;
-  align-items: center;
-  padding: 0 6px;
-  margin: 6px 8px;
-  line-height: 36px;
-  min-height: 36px;
-  white-space: nowrap;
-  min-width: 88px;
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 14px;
+}
+
+.brand-01 .font-weight-thin {
+  font-weight: 400;
+}
+
+.brand-01 img {
+  display: inline-block;
+  height: 16px;
+  margin-bottom: 4px;
+  margin-right: 3px;
+  margin-left: 1px;
+}
+
+.brand-01:hover {
   text-decoration: none;
-  cursor: pointer;
-  border: 1px solid transparent;
-  border-radius: 2px;
 }
 
-.alertify .dialog nav button:not(.btn):not(.pure-button):not(.md-button):not(.mdl-button):hover, .alertify .dialog nav button:not(.btn):not(.pure-button):not(.md-button):not(.mdl-button):active, .alertify .alert nav button:not(.btn):not(.pure-button):not(.md-button):not(.mdl-button):hover, .alertify .alert nav button:not(.btn):not(.pure-button):not(.md-button):not(.mdl-button):active {
-  background-color: rgba(0, 0, 0, 0.05);
-}
-
-.alertify .dialog nav button:not(.btn):not(.pure-button):not(.md-button):not(.mdl-button):focus, .alertify .alert nav button:not(.btn):not(.pure-button):not(.md-button):not(.mdl-button):focus {
-  border: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.alertify .dialog nav button.btn, .alertify .alert nav button.btn {
-  margin: 6px 4px;
-}
-
-.alertify-logs {
-  position: fixed;
-  z-index: 99999;
-}
-
-.alertify-logs.bottom, .alertify-logs:not(.top) {
-  left: 16px;
-}
-
-.alertify-logs.left, .alertify-logs:not(.right) {
-  left: 16px;
-}
-
-.alertify-logs.left > *, .alertify-logs:not(.right) > * {
-  float: left;
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
-  height: auto;
-}
-
-.alertify-logs.left > *.show, .alertify-logs:not(.right) > *.show {
-  left: 0;
-}
-
-.alertify-logs.left > *, .alertify-logs.left > *.hide, .alertify-logs:not(.right) > *, .alertify-logs:not(.right) > *.hide {
-  left: -110%;
-}
-
-.alertify-logs.right {
-  right: 16px;
-}
-
-.alertify-logs.right > * {
-  float: right;
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
-}
-
-.alertify-logs.right > *.show {
-  right: 0;
-  opacity: 1;
-}
-
-.alertify-logs.right > *, .alertify-logs.right > *.hide {
-  right: -110%;
-  opacity: 0;
-}
-
-.alertify-logs.top {
-  top: 16px;
-}
-
-.alertify-logs > * {
-  box-sizing: border-box;
-  transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
-  position: relative;
-  clear: both;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-  -webkit-perspective: 1000;
-          perspective: 1000;
-}
-
-.alertify-logs > * {
-  max-height: 0;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  opacity: 0;
-  pointer-events: none;
-}
-
-.alertify-logs > *.show {
-  margin-top: 1rem;
-  opacity: 1;
-  max-height: 1000px;
-  padding: 1rem;
-  pointer-events: auto;
+/*
+ * Disable antialising when scaling images
+ * @see https://stackoverflow.com/a/14068216/1465919
+ */
+.pixelated, .brand-01 img {
+  image-rendering: optimizeSpeed;
+  /* STOP SMOOTHING, GIVE ME SPEED  */
+  image-rendering: -moz-crisp-edges;
+  /* Firefox                        */
+  image-rendering: -o-crisp-edges;
+  /* Opera                          */
+  /* Chrome (and eventually Safari) */
+  image-rendering: pixelated;
+  /* Chrome */
+  image-rendering: optimize-contrast;
+  /* CSS3 Proposed                  */
+  -ms-interpolation-mode: nearest-neighbor;
+  /* IE8+  */
 }
 
 #itkanzlei_img_copyright, #itkanzlei_img_copyright {
